[package]
name = "test_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc = "0.12.0"
libp2p = "0.39.1"
serde = "1.0.126"
futures = "0.3.15"
async-std = { version = "1.9.0", features = ["attributes"] }
env_logger = "0.9.0"
jsonrpc-http-server = "18.0.0"